Bug 459363 - Fix computation of intrinsic width for <mspace> and <mpadded> elements. r=karlt