layout/mathml/nsMathMLmpaddedFrame.h
@@ -45,6 +45,10 @@ protected:
   
   virtual int GetSkipSides() const { return 0; }
 
+  virtual nsresult
+  MeasureForWidth(nsRenderingContext& aRenderingContext,
+                  nsHTMLReflowMetrics& aDesiredSize) MOZ_OVERRIDE;
+
 private:
   nsCSSValue mWidth;
   nsCSSValue mHeight;
